# Tennis-Collection-Robot

./: 1.Method_of _exhaustion.cpp  2.Greedy_Algorithm.cpp  CMakeLists.txt  README.md  check.cpp  checkCenter.cpp  edge.cpp  edge2list.cpp  function_declare.h  get_Random_points.cpp  get_centroid.cpp  include_all.h  main.cpp  movemet.cpp  readme.txt
config/: default.yaml
include/: function_declare.h  include_all.h
ml/: 0.allinone.cpp  1.get_data.cpp  2.training_svm.cpp  3.predict.cpp  4.predictrealtime.cpp  CMakeLists.txt  non_linear_svms_test.cpp  readme.txt
ml/data/: data.txt
ml/output/: TennisMode_good.xml  TennisModel_better.xml  TennisModel_for_ball_8.xml  readme.txt
src/: 1.Method_of_exhaustion.cpp  2.Greedy_Algorithm.cpp  CMakeLists.txt  FrameDiff.cpp  ProjectiveTransform.cpp  Trajectory.cpp  checkCircle.cpp  checkColour.cpp  edge2list.cpp  filter.cpp  get_Random_points.cpp  get_centroid.cpp  main.cpp  movemet.cpp
